--- a/app/views/epub_ebooks/show.html.erb
+++ b/app/views/epub_ebooks/show.html.erb
@@ -27,6 +27,20 @@
       <script src="https://cdn.hypothes.is/hypothesis"></script>
     <% end %>
   <% end %>
+
+  <% if @map_file_presenter.present? %>
+    <script type="text/javascript">
+        var close_map = function() {
+            document.querySelector('#modal-pdc-map').setAttribute('aria-hidden', 'true');
+            document.querySelector('#action-map').focus();
+        }
+
+        var open_map = function() {
+            document.querySelector('#modal-pdc-map').setAttribute('aria-hidden', 'false');
+        }
+    </script>
+  <% end %>
+
 <% end %>
 
 <% provide :body do %>
@@ -40,7 +54,7 @@
   <div class="skip"></div>
   <%# tag.div id: 'epub', class: press_presenter.present? ? press_presenter.press_subdomains : '' do %>
   <div class="too" id="epub">
-    
+
     <div class="nm--toolbar">
       <div id="action-close" class="cozy-control">
         <a class="cozy-close cozy-control" href="<%= @back_link %>" title="Close reader and return to previous page" aria-label="Close reader">
@@ -48,7 +62,7 @@
         </a>
       </div>
 
-      <button id="action-contents" data-toggle="open" class="button--sm">
+      <button id="action-contents" data-toggle="open" class="button--sm" aria-label="Contents">
           <i class="icon-align-left oi" data-glyph="align-left" title="Table of Contents" aria-hidden="true"></i>
       </button>
 
@@ -60,14 +74,14 @@
           <i class="icon-document oi" data-glyph="document" title="Notes and Definitions" aria-hidden="true"></i>
       </button>
 
-      <div id="action-map" class="cozy-control cozy-panel-map">
-        <a class="cozy-control" href="#">
-            <i class="icon-map oi" data-glyph="map" aria-hidden="true"></i>
-        </a>
-      </div>
+      <% if @map_file_presenter.present? %>
+        <button id="action-map" class="cozy-control cozy-panel-map" onclick="open_map()" aria-label="Interactive Map">
+          <i class="icon-map oi" data-glyph="map" aria-hidden="true" title="Accompanying Interactive Map"></i>
+        </button>
+      <% end%>
 
       <div id="action-resources" class="cozy-control cozy-panel-resources">
-        <a class="cozy-control" href="<%= @parent_presenter.catalog_url + '#resources' %>" target="_blank">
+        <a class="cozy-control" href="<%= @parent_presenter.catalog_url + '#resources' %>" target="_blank" aria-label="Resources">
             <i class="icon-folder oi" data-glyph="folder" aria-hidden="true"></i>
         </a>
       </div>
@@ -89,6 +103,26 @@
       <%= render "cozy_pdec_notes", presenter: @presenter, parent_presenter: @parent_presenter %>
     </div>
     <div class="nm--reader" id="reader"></div>
+
+
+    <% if @map_file_presenter.present? %>
+      <%# hastily-copied from a dynamically-added interactive map modal within CSB %>
+      <div class="cozy-modal modal-slide full" id="modal-pdc-map" aria-labelledby="modal-pdc-map-title" role="dialog" aria-describedby="modal-pdc-map-content" aria-hidden="true">
+        <div class="modal__overlay" tabindex="-1" data-modal-close="">
+          <div class="modal__container " role="dialog" aria-modal="true" aria-labelledby="modal-pdc-map-title" aria-describedby="modal-pdc-map-content" id="modal-pdc-map-container" style="height: 1170px; width: 2406px;">
+            <div role="document">
+              <header class="modal__header">
+                <h3 class="modal__title" id="modal-pdc-map-title">Accompanying Interactive Map for "La Princesse de Cleves"</h3>
+                <button class="modal__close" aria-label="Close modal" aria-controls="modal-pdc-map-container" data-modal-close="" onclick="close_map()"></button>
+              </header>
+              <main class="modal__content " id="modal-pdc-map-content" style="height: 980px;">
+                <div style="height: 100%; width: 100%"><iframe title='Accompanying Interactive Map for "La Princesse de Cleves"' style="width: 100%; height: 100%;" src="<%= @map_file_presenter %>"></iframe></div>
+              </main><footer class="modal__footer"><button class="button button--inline button--default" onclick="close_map()">Close</button></footer>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
 
     <script type="text/javascript">
       if ( true ) {
@@ -230,7 +264,7 @@
                     }
                 }
             });
-            
+
             var englishCheckbox = document.querySelector('#english');
             //var englishText;
             englishCheckbox.addEventListener('change', (contents) => {
@@ -252,7 +286,7 @@
                     }
                 }
             });
-            
+
             var passageCheckbox = document.querySelector('#passages');
             var passage;
 
@@ -319,7 +353,7 @@
 
         reader.on('resized', function () {
           console.log(":: resize detected");
-        });        
+        });
       }
     </script>
   <%# end %>
