--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -68,8 +68,9 @@
                    <%= t('monograph_catalog.index.read_book') %>
                 </a>
               <% else %>
+                <% princess_de_cleves = @presenter.subdomain == 'leverpress' && (@presenter.isbn.any? { |isbn| isbn.delete("^0-9") == '9781643150383' }) %>
                 <a id="monograph-read-btn"
-                   href="<%= epub_path(@presenter.reader_ebook) %>"
+                   href="<%= princess_de_cleves ? epub_ebook_path(@presenter.reader_ebook) : epub_path(@presenter.reader_ebook) %>"
                    class="btn btn-default"
                    data-turbolinks="false">
                    <%= t('monograph_catalog.index.read_book') %>
