--- a/app/views/epub_ebooks/_cozy_controls_tools.html.erb
+++ b/app/views/epub_ebooks/_cozy_controls_tools.html.erb
@@ -22,18 +22,14 @@
                 '<div class="tools">' +
                     '<fieldset class="text-tools">' +
                         '<div>Text Tools</div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="passages" name="passages">' +
-                            '<label class="svg" for="passages">' +
+                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="keywords" name="keywords">' +
+                            '<label class="svg" for="keywords">' +
                                 '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Show key passages</label></div>' +
+                                'Show keywords</label></div>' +
                         '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="terms" name="terms">' +
                             '<label class="svg" for="terms">' +
                                 '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
                                 'Show frequently used terms</label></div>' +
-                        '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="definitions" name="definitions">' +
-                            '<label class="svg" for="definitions">' +
-                                '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Show words with definitions</label></div>' +
                     '</fieldset>' +
                 '</div>' +
             '</div>';
