HELIO-3808 - add historical character links to text; add functionality for opening special notes in notes panel; styling changes based on author feedback

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1688,6 +1688,12 @@ footer.press {
 
 }
 
+.too .cozy-contents-contentlist {
+  ul li ul li ul {
+    margin-left: 20px;
+  }
+}
+
     /* notes panel */
     main#modal-notes-content {
       border-width: 2px 0;
