--- a/app/views/epub_ebooks/show.html.erb
+++ b/app/views/epub_ebooks/show.html.erb
@@ -236,108 +236,131 @@
 
         <% end %>
 
+        function runFrenchCheckbox(frenchCheckbox, frenchTexts) {
+          console.log("-- runFrenchCheckbox");
+          if (frenchCheckbox.checked) {
+            if (frenchTexts !== null) {
+              for(var i =0, n = frenchTexts.length; i < n; i++) {
+                var frenchText = frenchTexts[i];
+                frenchText.classList.remove('hide');
+                frenchText.classList.add('display');
+              }
+            }
+          } else {
+            if (frenchTexts !== null) {
+              for(var i =0, n = frenchTexts.length; i < n; i++) {
+                var frenchText = frenchTexts[i];
+                frenchText.classList.remove('display');
+                frenchText.classList.add('hide');
+              }
+            }
+          }
+        }
+
+        function runEnglishCheckbox(englishCheckbox, englishTexts) {
+          console.log("-- runEnglishCheckbox");
+          if (englishCheckbox.checked) {
+            if (englishTexts !== null) {
+              for(var i =0, n = englishTexts.length; i < n; i++) {
+                var englishText = englishTexts[i];
+                englishText.classList.remove('hide');
+                englishText.classList.add('display');
+              }
+            }
+          } else {
+            if (englishTexts !== null) {
+              for(var i =0, n = englishTexts.length; i < n; i++) {
+                var englishText = englishTexts[i];
+                englishText.classList.remove('display');
+                englishText.classList.add('hide');
+              }
+            }
+          }
+        }
+
+        function runTermsCheckbox(termsCheckbox, terms) {
+          console.log("-- runTermsCheckbox");
+          if (termsCheckbox.checked) {
+            if (terms !== null) {
+              for(var i =0, n = terms.length; i < n; i++) {
+                var term = terms[i];
+                term.classList.add('highlight');
+              }
+            }
+          } else {
+            if (terms !== null) {
+              for(var i =0, n = terms.length; i < n; i++) {
+                var term = terms[i];
+                term.classList.remove('highlight');
+              }
+            }
+          }
+        }
+
+        function runDefinitionCheckbox(definitionCheckbox, definitions) {
+          console.log("-- runDefinitionsCheckbox");
+          if (definitionCheckbox.checked) {
+            if (definitions !== null) {
+              for(var i =0, n = definitions.length; i < n; i++) {
+                var definition = definitions[i];
+                definition.classList.add('highlight');
+              }
+            }
+          } else {
+            if (definitions !== null) {
+              for(var i =0, n = definitions.length; i < n; i++) {
+                var definition = definitions[i];
+                definition.classList.remove('highlight');
+              }
+            }
+          }
+        }
 
         reader.on('ready:contents', function(contents) {
+          console.log("-- ready:contents");
+
           var frenchTexts =  contents.document.querySelectorAll(".french");
-          var englishTexts =  contents.document.querySelectorAll(".english");
-          var definitions = contents.content.querySelectorAll("[data-note-type='definition']");
-          var terms = contents.content.querySelectorAll(".FrequentlyUsedTerm", ".FrequentlyUsedTermTermwDefinition");
-
           var frenchCheckbox = document.querySelector('#french');
-            //var frenchText;
-            frenchCheckbox.addEventListener('change', (contents) => {
-                if (frenchCheckbox.checked) {
-                    if (frenchTexts !== null) {
-                      for(var i =0, n = frenchTexts.length; i < n; i++) {
-                        var frenchText = frenchTexts[i];
-                        frenchText.classList.remove('hide');
-                        frenchText.classList.add('display');
-                      }
-                    }
-                } else {
-                    if (frenchTexts !== null) {
-                      for(var i =0, n = frenchTexts.length; i < n; i++) {
-                        var frenchText = frenchTexts[i];
-                        frenchText.classList.remove('display');
-                        frenchText.classList.add('hide');
-                      }
-                    }
-                }
-            });
+          runFrenchCheckbox(frenchCheckbox, frenchTexts);
 
-            var englishCheckbox = document.querySelector('#english');
-            //var englishText;
-            englishCheckbox.addEventListener('change', (contents) => {
-                if (englishCheckbox.checked) {
-                    if (englishTexts !== null) {
-                      for(var i =0, n = englishTexts.length; i < n; i++) {
-                        var englishText = englishTexts[i];
-                        englishText.classList.remove('hide');
-                        englishText.classList.add('display');
-                      }
-                    }
-                } else {
-                    if (englishTexts !== null) {
-                      for(var i =0, n = englishTexts.length; i < n; i++) {
-                        var englishText = englishTexts[i];
-                        englishText.classList.remove('display');
-                        englishText.classList.add('hide');
-                      }
-                    }
-                }
-            });
+          frenchCheckbox.addEventListener('change', (contents) => {
+            runFrenchCheckbox(frenchCheckbox, frenchTexts);
+          });
 
-            var passageCheckbox = document.querySelector('#passages');
-            var passage;
+          var englishTexts =  contents.document.querySelectorAll(".english");
+          var englishCheckbox = document.querySelector('#english');
+          runEnglishCheckbox(englishCheckbox, englishTexts);
 
-            var termsCheckbox = document.querySelector('#terms');
-            var terms;
-            termsCheckbox.addEventListener('change', (contents) => {
-                if (termsCheckbox.checked) {
-                    if (terms !== null) {
-                        for(var i =0, n = terms.length; i < n; i++) {
-                            var term = terms[i];
-                            term.classList.add('highlight');
-                        }
-                    }
-                } else {
-                    if (terms !== null) {
-                        for(var i =0, n = terms.length; i < n; i++) {
-                            var term = terms[i];
-                            term.classList.remove('highlight');
-                        }
-                    }
-                }
+          englishCheckbox.addEventListener('change', (contents) => {
+            runEnglishCheckbox(englishCheckbox, englishTexts);
+          });
 
-            });
+          var terms = contents.content.querySelectorAll(".FrequentlyUsedTerm", ".FrequentlyUsedTermTermwDefinition");
+          var termsCheckbox = document.querySelector('#terms');
+          runTermsCheckbox(termsCheckbox, terms);
 
-            var definitionCheckbox = document.querySelector('#definitions');
-            var definitions;
-            definitionCheckbox.addEventListener('change', (contents) => {
-                if (definitionCheckbox.checked) {
-                    if (definitions !== null) {
-                        for(var i =0, n = definitions.length; i < n; i++) {
-                            var definition = definitions[i];
-                            definition.classList.add('highlight');
-                        }
-                    }
-                } else {
-                    if (definitions !== null) {
-                        for(var i =0, n = definitions.length; i < n; i++) {
-                            var definition = definitions[i];
-                            definition.classList.remove('highlight');
-                        }
-                    }
-                }
+          termsCheckbox.addEventListener('change', (contents) => {
+            runTermsCheckbox(termsCheckbox, terms);
+          });
 
-            });
+          var definitions = contents.content.querySelectorAll("[data-note-type='definition']");
+          var definitionCheckbox = document.querySelector('#definitions');
+          runDefinitionCheckbox(definitionCheckbox, definitions);
 
-            //find links to notes panel
-            var links = contents.content.querySelectorAll("a[data-note-type='definition']");
-            for(var i =0, n = links.length; i < n; i++) {
-              var link = links[i];
-              link.addEventListener('click', click_handler);
-            }
+          definitionCheckbox.addEventListener('change', (contents) => {
+            runDefinitionCheckbox(definitionCheckbox, definitions);
+          });
+
+          // Still to be done I guess?
+          var passageCheckbox = document.querySelector('#passages');
+          var passage;
+
+          // find links to notes panel
+          var links = contents.content.querySelectorAll("a[data-note-type='definition']");
+          for(var i =0, n = links.length; i < n; i++) {
+            var link = links[i];
+            link.addEventListener('click', click_handler);
+          }
         });
 
         // Initiate EPUB Reader
