HELIO-3803 - allow links to map to open the map overlay panel; modify spelling for Francais

--- a/app/views/epub_ebooks/_cozy_controls_notes.html.erb
+++ b/app/views/epub_ebooks/_cozy_controls_notes.html.erb
@@ -427,6 +427,12 @@
       
     };
 
+    // map links in text open map panel
+    var mapClick_handler = function(event) {
+      event.preventDefault();
+      open_map();
+    }
+
 
     // notes panel toggle
     var notesButton = document.querySelector('#action-notes');
