--- a/app/views/epub_ebooks/_cozy_controls_tools.html.erb
+++ b/app/views/epub_ebooks/_cozy_controls_tools.html.erb
@@ -12,7 +12,7 @@
                         '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="french" name="french" checked>' +
                             '<label class="svg" for="french">' +
                                 '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
-                                'Française</label></div>' +
+                                'Français</label></div>' +
                         '<div class="check checkbox--svg"><input class="sr-only" type="checkbox" id="english" name="english" checked>' +
                             '<label class="svg" for="english">' +
                                 '<svg viewBox="0 0 100 100"><path class="path" fill="none" stroke="#000" stroke-width="13" d="M12.1 52.1l24.4 24.4 53-53"/></svg>' +
