HELIO-3803 - add hypothes.is annotation tool

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1686,6 +1686,16 @@ footer.press {
     margin-left: 15px;
   }
 
+  .cozy-control .annotation-count {
+    right: -45px;
+    color: #333;
+    top: -35px;
+  }
+
+  .cozy-control button.button--sm.annotation {
+    margin: 0 15px 0;
+  }
+
 }
 
 .too .cozy-contents-contentlist {
