HELIO-4330 - update historical characters in superscript, correct names, and adjust definitions legend

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1860,6 +1860,14 @@ footer.press {
       transition: background 0.1s cubic-bezier(.33,.66,.66,1);
     }
 
+    main#modal-notes-content section#historical_characters section.Heading2 h5 button {
+      display: inline-block;
+    }
+
+    main#modal-notes-content section#historical_characters section.Heading2 h5 button svg {
+      float: right;
+    }
+
 
 .cozy-container i[class^='icon-'] {
     font-size: 2rem !important;
