--- a/app/views/epub_ebooks/_cozy_controls_notes.html.erb
+++ b/app/views/epub_ebooks/_cozy_controls_notes.html.erb
@@ -251,7 +251,7 @@
         // with the SVG plus/minus icon
         character.innerHTML = `
           <button aria-expanded="false">
-            ${character.textContent}
+            ${character.innerHTML}
             <svg aria-hidden="true" focusable="false" viewBox="0 0 10 10">
               <rect class="vert" height="8" width="2" y="1" x="4"/>
               <rect height="2" width="8" y="4" x="1"/>
